fix: change to --add-opens, but keep --add-exports for  javadoc